include_HEADERS = \
  ckovpara.inc \
  cmcevt.inc \
  emcbit.inc \
  emcvar.inc \
  encodeRoot.h \
  event.inc \
  evntcode.inc \
  evtzebra.inc \
  fglink.inc \
  fpalink.inc  \
  fpblink.inc \
  fpclink.inc \
  fpdlink.inc \
  fpelink.inc \
  fpelink_spec.inc \
  fpflink.inc \
  fpglink.inc \
  fphlink.inc \
  fpilink.inc \
  fpklink.inc \
  fpmlink.inc \
  fpnlink.inc \
  fpplink.inc \
  fpqlink.inc \
  fprlink.inc \
  fpslink.inc \
  fptlink.inc \
  fpvlink.inc \
  fpwlink.inc \
  fpxlink.inc \
  fpylink.inc \
  fmpclink.inc \
  fstore.inc \
  g77trigdef.inc \
  gactout.inc \
  gcbank.inc \
  gccurs.inc \
  gccuts.inc \
  gcdraw.inc \
  gcflag.inc \
  gcgobj.inc \
  gchil2.inc \
  gcjloc.inc \
  gckine.inc \
  gclist.inc \
  gcmulo.inc \
  gcmutr.inc \
  gcmzfo.inc \
  gcnum.inc \
  gcomis.inc \
  gconsp.inc \
  gconst.inc \
  gcopti.inc \
  gcparm.inc \
  gcphys.inc \
  gcrz.inc \
  gcscal.inc \
  gcscan.inc \
  gcsets.inc \
  gcspee.inc \
  gcstak.inc \
  gctime.inc \
  gctmed.inc \
  gctrak.inc \
  gcunit.inc \
  gcursb.inc \
  gcvolu.inc \
  gcxlun.inc \
  gswits.inc \
  guevgen.inc \
  gugeom.inc \
  guhitdet.inc \
  guphnx.inc \
  hbd_geompar.inc \
  hbd_mednmb.inc \
  mapfest.inc \
  mum_ntpl.inc \
  mun_collar.inc \
  namlvl.inc \
  pawc.inc \
  pisa_parts.inc \
  pisalun.inc \
  pisascr.inc \
  pythia_e.inc \
  quest.inc \
  secubuf.inc \
  stosto.inc \
  subevt.inc \
  sublink.inc \
  u_local.inc \
  udst.inc \
  zunit.inc
